--- a/Rapport/1Chapters/2Concept/OverallSystemDesign.tex
+++ b/Rapport/1Chapters/2Concept/OverallSystemDesign.tex
@@ -2,13 +2,23 @@
 The purpose of this chapter is to give an outline of the design ideas considered for the system. As the problem statement pointed out, the system will consist of a processing system which will allow for adjustment when in use, such that the speaker will not suffer from the voice coil hitting the backplate. As shown in \autoref{fig:speaker_block2} the system will be integrated within an active speaker where it will act as the processing system between the external audio source and the amplifier.
 
 \begin{figure}[H]
-\centering
-\tikzsetnextfilename{SpeakerBlock2}
-\scalebox{0.9}{
-\input{figures/SpeakerBlock2.tex}}
-\caption{Block diagram of an active speaker.}
-\label{fig:speaker_block2}
+	\centering
+	\tikzsetnextfilename{SpeakerBlock}
+	\scalebox{0.9}{
+		\input{figures/SpeakerBlock.tex}}
+	\caption{Block diagram of an active speaker.}
+	\label{fig:speaker_block2}
 \end{figure}
+
+
+%\begin{figure}[H]
+%\centering
+%\tikzsetnextfilename{SpeakerBlock2}
+%\scalebox{0.9}{
+%\input{figures/SpeakerBlock2.tex}}
+%\caption{Block diagram of an active speaker.}
+%\label{fig:speaker_block2}
+%\end{figure}
 
 The starting point of the design concept is to determine what type of processing system is going to be developed. Different plausible solution will be reviewed and evaluated in order to determine what solutions would be optimally. 
 
