--- a/Rapport/1Chapters/Filters/Design.tex
+++ b/Rapport/1Chapters/Filters/Design.tex
@@ -107,5 +107,11 @@ From XX it can be verified that the filter meets the requirements sat up for the
 	\label{fig:decIntComp}
 \end{figure}
 
+\begin{figure}[H]
+	\centering
+	\includegraphics[width=\textwidth]{figures/DecIntCompMirror}
+	\caption{Decimation and interpolation filter´s magnitude response compared.}
+	\label{fig:decIntComp3}
+\end{figure}
 
 The decimation and interpolation filter is now designed with quantisized values. The implementation of the filters can be seen in XX.    
