--- a/Rapport/2Appendix/AcceptFrequencyResponse.tex
+++ b/Rapport/2Appendix/AcceptFrequencyResponse.tex
@@ -12,9 +12,8 @@ The setup of this test are depicted in \autoref{fig:AcceptFreqResponse}, where t
 \item Generator amplitude: \textbf{X} V.
 \item Pink noise.
 \end{itemize}
-\item The software of the system used for the bypass test is found at CD. \todo[inline]{CD}
-\item The software of the system used for the stage1 test is found at CD. \todo[inline]{CD}
-\item The software of the system used for the full system test is found at CD. \todo[inline]{CD}
+\item The software of the system used for the bypass test is found at CD. \path{CD://Software/SystemFinal}
+
 \end{itemize}
 
 
