--- a/Rapport/figures/IntMag.tex
+++ b/Rapport/figures/IntMag.tex
@@ -7634,5 +7634,25 @@ nan	nan\\
 0.9451904296875	-97.832376074303\\
 0.9453125	-97.9818713077673\\
 };
+\addplot [color=black!30!red,solid,forget plot]
+  table[row sep=crcr]{%
+0.2	-1\\
+0.4	-1\\
+};
+\addplot [color=black!30!red,solid,forget plot]
+  table[row sep=crcr]{%
+0.4	-1\\
+0.4	-20\\
+};
+\addplot [color=black!30!red,solid,forget plot]
+  table[row sep=crcr]{%
+0.7	-80\\
+0.7	-60\\
+};
+\addplot [color=black!30!red,solid,forget plot]
+  table[row sep=crcr]{%
+0.7	-80\\
+0.9	-80\\
+};
 \end{axis}
 \end{tikzpicture}%
