Skervet noget til preanalysis

--- a/Rapport/1Chapters/1Preanalysis/Loudspeaker_test.tex
+++ b/Rapport/1Chapters/1Preanalysis/Loudspeaker_test.tex
@@ -51,13 +51,13 @@ During the first accelerometer measurements the loudspeaker acts linear with ver
 \label{fig:raw_driver19_windows_main}
 \end{figure}
 
-Further investigation of the spikes is shown in figure \ref{fig:raw_driver19_window_zoom_main}. It shows that theses spikes appear where the speaker should naturally attenuate the spikes and the spikes appear with no sudden coherence which show signs of the coil hitting the backplate. Looking further into the specific area, around 70-90 Hz, an FFT analysis shows how the hit on the back plates appears which is shown on \autoref{fig:FFT_hit_Main}.
+Further investigation of the spikes is shown in figure \ref{fig:raw_driver19_window_zoom_main}. It shows that theses spikes appear where the speaker should naturally attenuate the spikes and they appear with no sudden coherence which show signs of the coil hitting the backplate. Looking further into the specific area, around 70-90 Hz, an FFT analysis shows how the hit on the back plates appears which is shown on \autoref{fig:FFT_hit_Main}.
 
 \begin{figure}[H]
 \centering
 \tikzsetnextfilename{FFTFinal}
 \input{figures/Forsog1/FFTFinal.tex}
-\caption{The spectrum of the window. The yellow graph is dataset 1, red is 10 and blue is 19.}
+\caption{The spectrum of the window. The measurements are in ascending order 1, 10, 13, 16 and 19}
 \label{fig:FFT_hit_Main}
 \end{figure}
 
