--- a/Rapport/1Chapters/1Preanalysis/PreanalysisMAIN.tex
+++ b/Rapport/1Chapters/1Preanalysis/PreanalysisMAIN.tex
@@ -58,7 +58,7 @@ From the situations it is seen that the most critical situation would be if the 
 \textit{How can a signal processing system in an active speaker prevent the coil from hitting the back plate of the woofer and reduce distortion compared to peak limitation?"}
 \end{center}
 
-Besides the problem stated above, DALI desires to have incorporated a user controlled equalizer for the commercial user so it will be able to function more optimal in different room sizes. Further more it should be fully customizable for ongoing adjustments during the development period.\todo{Tilføj kilde til mail fra DALI}
+Besides the problem stated above, DALI desires to have incorporated a user controlled equalizer for the commercial user so it will be able to function more optimal in different room sizes. Further more it should be fully customizable for ongoing adjustments during the development period. The DALI requirements are derived via e-mail correspondence located at: \scalebox{0.7}{\path{CD://MAIL/DALIRequirements.pdf}}  
 
 
 
