--- a/Rapport/1Chapters/1Preanalysis/feedback_feedforward.tex
+++ b/Rapport/1Chapters/1Preanalysis/feedback_feedforward.tex
@@ -68,14 +68,14 @@ The Previous tests have shown that it is possible to use an accelerometer to est
 
 It can therefore be concluded that developing a system based on measurements from a accelerometer might turn out to be too complex to be realized in time due to time constraints. The system to be designed will therefore be based on a feedforward system. The concept of a feedforward system which fulfill the problem statement is shown in \autoref{fig:Concept}.
 
-\begin{figure}[H]
-\centering
-\tikzsetnextfilename{Concept}
-\scalebox{0.8}{
-\input{figures/Concept.tex}}
-\caption{Overview of a feedforward design concept.}
-\label{fig:Concept}
-\end{figure}
+%\begin{figure}[H]
+%\centering
+%\tikzsetnextfilename{Concept}
+%\scalebox{0.8}{
+%\input{figures/Concept.tex}}
+%\caption{Overview of a feedforward design concept.}
+%\label{fig:Concept}
+%\end{figure}
 
 \todo[inline]{Er figur korrekt?}
 
