--- a/Rapport/figures/allBands.tex
+++ b/Rapport/figures/allBands.tex
@@ -289,6 +289,7 @@ axis background/.style={fill=white}
 23.4375	-16.5\\
 33.1456303681194	-1.6\\
 33.1456303681194	0.5\\
+33.1456303681194	0.5\\
 36.1455662204986	0.5\\
 39.4170194650179	0.5\\
 42.984564525219	0.5\\
@@ -303,8 +304,22 @@ axis background/.style={fill=white}
 375	-55\\
 750	-60\\
 };
+%\addplot [color=white!30!black,solid,forget plot]
+%  table[row sep=crcr]{%
+%33.1456303681194	-5.5\\
+%33.1456303681194	-5.5\\
+%36.1455662204986	-1.6\\
+%39.4170194650179	-0.8\\
+%42.984564525219	-0.6\\
+%46.875	-0.5\\
+%51.117549968684	-0.6\\
+%55.7440835157526	-0.8\\
+%60.7893541242661	-1.6\\
+%66.2912607362388	-5.5\\
+%66.2912607362388	-5.5\\
+%};
 \addplot [color=white!30!black,solid,forget plot]
-  table[row sep=crcr]{%
+table[row sep=crcr]{%
 33.1456303681194	-5.5\\
 33.1456303681194	-5.5\\
 36.1455662204986	-1.6\\
@@ -317,5 +332,6 @@ axis background/.style={fill=white}
 66.2912607362388	-5.5\\
 66.2912607362388	-5.5\\
 };
+
 \end{axis}
 \end{tikzpicture}%
