--- a/Rapport/1Chapters/1Preanalysis/feedback_feedforward.tex
+++ b/Rapport/1Chapters/1Preanalysis/feedback_feedforward.tex
@@ -68,15 +68,15 @@ The Previous tests have shown that it is possible to use an accelerometer to est
 
 It can therefore be concluded that developing a system based on measurements from a accelerometer might turn out to be too complex to be realized in time due to time constraints. The system to be designed will therefore be based on a feedforward system. The concept of a feedforward system which fulfill the problem statement is shown in \autoref{fig:Concept}.
 
-%\begin{figure}[H]
-%\centering
-%\tikzsetnextfilename{Concept}
-%\scalebox{0.8}{
-%\input{figures/Concept.tex}}
-%\caption{Overview of a feedforward design concept.}
-%\label{fig:Concept}
-%\end{figure}
+\begin{figure}[H]
+\centering
+\tikzsetnextfilename{Concept}
+\scalebox{0.8}{
+\input{figures/Concept.tex}}
+\caption{Overview of a feedforward design concept.}
+\label{fig:Concept}
+\end{figure}
 
-\todo[inline]{Er figur korrekt?}
+Since the system will be controlled using a feedforward system which should be able to analyze, process and correct signals before the music is played. It gives rise to questioning what kind of platform should be used and what kind of requirements are needed for such a system. On the market there are different plausible platforms which meets with the demands all with different advantages and disadvantages. The preceding section will cover the determination of which platform that will function best in a active loudspeaker system . 
 
-\textbf{The design concept consist of a signal processing block, which will be analysed to understand which solution is best for the problem stated. A signal analysis block which will not be analysed further in this chapter, a user interface which will be analysed to determine how the user interface should be designed and lastly the processor block which will be analysed to determine which type of processor that should be used.}
+%\textbf{The design concept consist of a signal processing block, which will be analysed to understand which solution is best for the problem stated. A signal analysis block which will not be analysed further in this chapter, a user interface which will be analysed to determine how the user interface should be designed and lastly the processor block which will be analysed to determine which type of processor that should be used.}
