--- a/Rapport/1Chapters/1Preanalysis/hit_detection.tex
+++ b/Rapport/1Chapters/1Preanalysis/hit_detection.tex
@@ -2,7 +2,7 @@
 
 As previously stated, it is possible that the loudspeaker coil hits the back plate of the driver if the coil moves too far back. In the long run this will damage the loudspeaker, and should therefore be avoided. In this section an analysis on how to detect these hits, will be provided. It is seen that the impulse arrives spontaneously and from the measurements it can be concluded that the backplate hit is present at a wattage of 168 watt. This is clearly shown in \autoref{fig:FFT_hit_Main} where the measurement at 168 have and increase in energy level in the lower frequency area.
 
-\textbf{From \autoref{subsec:impulses} the frequency response of a mechanical frame of a loudspeaker has the same characteristics as a low-pass filter. This means, if the coil is hitting the back plate of the driver, it will result in a increase in energy in the low frequency spectrum. As most music and loudspeakers have some sort of a high-pass filter implemented to remove almost non-audible sound, it can be assumed that only a back plate hit will generate vibrations at very low frequencies between, for instance, 0 Hz to 20 Hz. To examine if this is true, a section of the dataset 19 of the driver, where a hit is suspected to have occurred, is analysed.} %The analysed section is seen in \autoref{fig:raw_driver19_windows}.
+Since a woofer mainly is constructed by the use of a coil, when seen from an electrical point of view, the frequency response of such a woofer has the same characteristics as a low-pass filter. This means, if the coil is hitting the back plate of the driver, it will result in a increase of energy in the low frequency spectrum. However, since most music and loudspeakers have some sort of a high-pass filter implemented to remove almost non-audible sound, it can be assumed that only a back plate hit will generate vibrations at very low frequencies between, for instance, 0 Hz to 20 Hz. To examine if this is true, a section of the dataset 19 of the driver, where a hit is suspected to have occurred, is analysed. %The analysed section is seen in \autoref{fig:raw_driver19_windows}.
 
 
 %\begin{figure}[H]
