--- a/Rapport/figures/Concept.tex
+++ b/Rapport/figures/Concept.tex
@@ -3,8 +3,8 @@
 \node [block, fill=black!80,text=white] (AudioSource) at (0,0) {Audio Source};
 
 %% DSP %%
-\node [block, fill=blue!15] (Equalizer1) at ($(AudioSource)+(3.5,0)$) {Equalizer};
-\node [block, fill=blue!15] (SpectralAnalysis) at ($(Equalizer1)+(3.5,0)$) {Signal analysis};
+%\node [block, fill=blue!15] (Equalizer1) at ($(AudioSource)+(3.5,0)$) {Equalizer};
+\node [block, fill=blue!15] (SpectralAnalysis) at ($(AudioSource)+(3.5,0)$) {Signal analysis};
 \node [block, fill=blue!15] (Equalizer) at ($(SpectralAnalysis)+(4.5,0)$) {Signal processing};
 
 
@@ -22,17 +22,17 @@
 %\draw[->] (Developer) -- (UserInterfaceDev);
 
 % Store Blokke %%
-\begin{pgfonlayer}{bg}
-\draw[thick, fill=black!10] ($(-1.75,1.2)+(Equalizer1)$) -- ($(2.5,1.2)+(Equalizer)$) -- ($(2.5,-1.5)+(Equalizer)$) -- ($(-1.75,-1.5)+(Equalizer1)$) -- ($(-1.75,1.2)+(Equalizer1)$);
-\node (DSPtag) at ($(0,-1.1)+(SpectralAnalysis)$) {\textbf{Digital Processing System}};
+\begin{pgfonlayer}{background}
+\draw[thick, fill=black!10] ($(-1.75,1.2)+(SpectralAnalysis)$) -- ($(2.5,1.2)+(Equalizer)$) -- ($(2.5,-1.5)+(Equalizer)$) -- ($(-1.75,-1.5)+(SpectralAnalysis)$) -- ($(-1.75,1.2)+(SpectralAnalysis)$);
+\node (DSPtag) at ($(1,-1.1)+(SpectralAnalysis)$) {\textbf{Digital Processing System}};
 
 \draw[thick, fill=black!10] ($(-2.5,1)+(Driver)$) -- ($(2.5,1)+(Amplifier)$) -- ($(2.5,-1.5)+(Amplifier)$) -- ($(-2.5,-1.5)+(Driver)$) -- ($(-2.5,1)+(Driver)$);
 \node (DSPtag) at ($(2,-1.1)+(Driver)$) {\textbf{Speaker Enclosure}};
 \end{pgfonlayer}
 
 %% Forbindelse %%
-\draw[->] (AudioSource) -- (Equalizer1);
-\draw[->] (Equalizer1) -- (SpectralAnalysis);
+\draw[->] (AudioSource) -- (SpectralAnalysis);
+%\draw[->] (Equalizer1) -- (SpectralAnalysis);
 \draw[->] (SpectralAnalysis) -- (Equalizer);
 \draw[->] (Equalizer) -- (Amplifier);
 \draw[->] (Amplifier) -- (Driver);
