--- a/Rapport/1Chapters/2Concept/SignalProcessingTool.tex
+++ b/Rapport/1Chapters/2Concept/SignalProcessingTool.tex
@@ -178,7 +178,7 @@ The parametric equalizer can be seen as a combined peak- and notch filter, where
 \label{fig:parametric_equalizer}
 \end{figure}
 
-Another advantages of implementing a parametric equalizer is that any parametric filter can be realized as a second order filter. This means the implementation can be done efficiently and without a high risk of IIR filters getting unstable, since it is only a second order filter. For instance, if an attenuation is desired in the bass with a high bandwidth and boost at a high frequency with low bandwidth, this can easily be realized with a parametric equalizer, since the bandwidth of the parametric equalizer is variable. An illustration of frequency response of a parametric filter is shown in \autoref{fig:parametric_eq_preanalysis_comb}.
+Another advantages of implementing a parametric equalizer is that any parametric filter can be realized as a second order filter. This means the implementation can be done efficiently and without a high risk of IIR filters getting unstable, since it is only a second order filter. For instance, if an attenuation is desired in the bass with a high bandwidth and boost at a high frequency with low bandwidth, this can easily be realized with a parametric equalizer, since the bandwidth of the parametric equalizer is variable. An illustration of the frequency response of a parametric filter is shown in \autoref{fig:parametric_eq_preanalysis_comb}.
 
 \begin{figure}[H]
 \centering
