--- a/Rapport/2Appendix/IIRFilter.tex
+++ b/Rapport/2Appendix/IIRFilter.tex
@@ -147,7 +147,7 @@ The inverse z-transformation is now applied and following difference equation is
 y[n] =  \sum\limits_{k=0}^{M}b_kx[n-k] -\sum\limits_{k=1}^{N}a_ky[n-k]
 \label{eq:time_domain2}
 \end{align}
-\autoref{eq:time_domain2} can then be implemented into a computer such as a DSP or microcontroller. Another topic is filter structures, which is a topic about how to implement filters efficiently. However since IIR-filters are not used in this project, no further discussion on the topic will be provided.
+\autoref{eq:time_domain2} can then be implemented into a computer such as a DSP or microcontroller. Another topic is filter structures, which is a topic about how to implement filters efficiently. However since only a 1. order IIR filter is used in this project a detailed explanation of filter structures will not be provided.
 
 
 
