--- a/Rapport/1Chapters/2Concept/signalProcessingConclusion.tex
+++ b/Rapport/1Chapters/2Concept/signalProcessingConclusion.tex
@@ -21,7 +21,7 @@ The following methods for analysing and processing signals have been examined:
 
 The optimal way of determing how much the diapragm moves is by measuring the RMS value of a signal and not the peak value, because the peak value does not give any information of the power which RMS does. In effect this means that a high peak value could result in a small movement in the diapragm while a high RMS value will always result in a large movement in the diapraghm. This is because a peak value could just be a single sample while the RMS is the average over a time interval. 
 
-Because its only large RMS values in 500 Hz \todo{Hvordan argumenter vi for det dali?}and below which could result in the coil hitting the backplate the analyzed signals spectrum should be 500 Hz and below, which can either be done with a spectrum analyzer or a FFT. The method choosen to analyse the signal spectrum is the spectrum analyzer, because it is firstly faster computational wise because no transformation is necessary, secondly because the information wanted is the RMS value of the band and not a specific frequency which sorts out the FFT. %This spectrum analyzer should meet the standard IEC 61260 relating to octave-band and fractional-octave-band filters. 
+500 Hz are selected as the determined problem area in, it is based on subjective analysis of the trails in Appendix \autoref{app:journal_speaker_test} and cooperation with DALI\footnote{\scalebox{0.7}{\path{CD://MAIL/DALIUpdate.pdf}}}. This is because its only large RMS values in 500 Hz and below which could result in the coil hitting the backplate the analyzed signals spectrum should be 500 Hz and below, which can either be done with a spectrum analyzer or a FFT. The method choosen to analyse the signal spectrum is the spectrum analyzer, because it is firstly faster computational wise because no transformation is necessary, secondly because the information wanted is the RMS value of the band and not a specific frequency which sorts out the FFT.   %This spectrum analyzer should meet the standard IEC 61260 relating to octave-band and fractional-octave-band filters. 
 
 For attenuating the signal both a compressor or an equalizer could be used. The method choosen is the compressor because of the spectrum analyzer. The spectrum analyzer divides the signal into the correct band/bands so there is no need for an equalizer. If the FFT had been choosen as the analyser of the signal spectrum the equalizer processed in the frequency domain would have been optimally, because the transform from time to frequency is given because of the needed FFT. 
 
