--- a/Rapport/1Chapters/2Requirements/Overview.tex
+++ b/Rapport/1Chapters/2Requirements/Overview.tex
@@ -13,7 +13,7 @@ In the test a group of 10 people were subjected to the following effectblocks:
     \item Single-band:
     \begin{itemize}
     \item 1 compressor ranging the entire frequency spectrum.
-    \item 12 dB attenuation at 0 dBFS. \todo{Hvorfor står denne ikke ved multibånd}
+    \item 12 dB attenuation at 0 dBFS.
     \item Attack time of 0.5 ms and release time of 1 ms.
     \end{itemize}
     \item Multi-band:
@@ -25,6 +25,7 @@ In the test a group of 10 people were subjected to the following effectblocks:
     \item Attack time of 0,5 ms and release time of 1 ms.
     \item 1 compressor ranging the entire frequency spectrum.
     \item Attack time of 0,5 ms and release time of 1 ms.
+    \item 12 dB attenuation at 0 dBFS.
     \end{itemize}
  \end{itemize}
 Using the following songs in different genres:
