--- a/Rapport/00setup/mybib.bib
+++ b/Rapport/00setup/mybib.bib
@@ -39,6 +39,14 @@
     year      = {2013},
 }
 
+@book{Oppenheim,
+	author    = {Alan V. Oppenheim \& Ronald W. Schafer},
+	title     = {Discrete-Time Signal Processing},
+	publisher = {Pearson},
+	edition  = {3rd},
+	year      = {2010},
+}
+
 @MISC{DaliSpec,
   title = {DALI ZENSOR 1 AX},
   author = {{DALI}},
